01-Change the POM Project Description

--- a/movie-catalog-service/pom.xml
+++ b/movie-catalog-service/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>movie-catalog-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>movie-catalog-service</name>
-    <description>Demo project for Spring Boot</description>
+    <description>A service for movie catalog</description>
 
     <properties>
         <java.version>1.8</java.version>
