--- a/ratings-data-service/pom.xml
+++ b/ratings-data-service/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>ratings-data-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ratings-data-service</name>
-    <description>Demo project for Spring Boot</description>
+    <description>A service for ratings data</description>
 
     <properties>
         <java.version>1.8</java.version>
