--- a/movie-info-service/pom.xml
+++ b/movie-info-service/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>movie-info-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>movie-info-service</name>
-    <description>Demo project for Spring Boot</description>
+    <description>A service for movie info</description>
 
     <properties>
         <java.version>1.8</java.version>
